--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
+    "TagCloud": "^2.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
