--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery-tagcanvas": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
